--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,5 +5,5 @@ block content
   .album.py-5.bg-light
     .container
       .row
-        each item in data.rss.channel.item
+        each item in data
           +thumbCard(item)
