--- a/src/views/mixins/_thumbCard.pug
+++ b/src/views/mixins/_thumbCard.pug
@@ -1,16 +1,17 @@
-mixin thumbCard(item)
-  .col-md-4
-    .card.mb-4.shadow-sm
-      svg.bd-placeholder-img.card-img-top&attributes({"width": "100%"}, {"height": "225"}, {"focusable": "false"}, {"role": "img"})
-        //- title #{item.title}
-        rect(width="100%" height="100%" fill="#55595c")
-        text(x="50%" y="50%" fill="#eceeef" dy=".3em") #{item.title}
-      .card-body
-        .card-text
-            b #{item.title}
-        .card-text #{item.description}
-        .card-text.mb-4 3
-        .d-flex.justify-content-between.align-items-center
-          .btn-group
-            button.btn.btn-sm.btn-outline-secondary View
-          small.text-muted #{item.pubDate}
+mixin thumbCard(data)
+  each item in data.rss.channel.item
+    .col-md-4
+      .card.mb-4.shadow-sm
+        svg.bd-placeholder-img.card-img-top&attributes({"width": "100%"}, {"height": "225"}, {"focusable": "false"}, {"role": "img"})
+          //- title #{item.title}
+          rect(width="100%" height="100%" fill="#55595c")
+          text(x="50%" y="50%" fill="#eceeef" dy=".3em") #{item.title}
+        .card-body
+          .card-text
+              b #{item.title}
+          .card-text #{item.description}
+          .card-text.mb-4 3
+          .d-flex.justify-content-between.align-items-center
+            .btn-group
+              a.btn.btn-sm.btn-outline-secondary(href=item.link) View
+            small.text-muted #{item.pubDate}
